# goodreads

./: Cargo.toml  README.md
csv/: goodreads_library_export.csv
examples/: goodreads_to_rust.rs
src/: lib.rs
