[package]
name = "goodreads"
version = "0.1.1"
edition = "2021"
authors = ["Jared Forth <jaredforthdev@gmail.com>"]

description = "A crate for deserializing a Goodreads library export"

homepage = "https://github.com/jaredforth/goodreads"
repository = "https://github.com/jaredforth/goodreads.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/goodreads"
keywords = ["csv", "goodreads", "goodreads-data"]
categories = ["data-structures"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }